- https://github.com/eclipse-syson/syson/issues/1683[#1683] [diagrams] Fix an error where the creation of a `NamespaceImport` graphical node as first element in a diagram was not hiding "Add your first element" graphical node.

=== Improvements

- https://github.com/eclipse-syson/syson/issues/1620[#1620] [services] Handle short names in qualified names when direct editing.
- https://github.com/eclipse-syson/syson/issues/1636[#1636] [export] Implement `OperationExpression` using operator 'meta'.
- https://github.com/eclipse-syson/syson/issues/1647[#1647] [import] Textual import should enforce `Feature` reference as _memberFeature_ in `EndFeatureMembership` to have _isEnd_ set to _true_.
- https://github.com/eclipse-syson/syson/issues/1642[#1642] [export] Export `ConnectionUsage` in textual format.
- https://github.com/eclipse-syson/syson/issues/1609[#1609] [explorer] Rework how the explorer displays libraries.
The explorer now displays imported-by-reference libraries that only contain `LibraryPackage` in the `User libraries` directory.
Other libraries are always displayed at the root of the explorer.
The explorer now appends `[read-only]` to read-only models and the `KerML` and `SysML` directories.
The explorer now appends `library-name@library-version` to imported-by-reference library models.
- https://github.com/eclipse-syson/syson/issues/1661[#1661] [frontend] Extract the frontend extension registry in a separate file and move it from _syson_ to _syson-components_ frontend module in order to be easily used by downstream applications.